Add pod creation and NodePort service steps to README and YAML files

--- a/minio-pv.yaml
+++ b/minio-pv.yaml
@@ -1,4 +1,3 @@
-# minio-pv.yaml
 apiVersion: v1
 kind: PersistentVolume
 metadata:
@@ -11,3 +10,16 @@ spec:
   storageClassName: minio-hostpath
   hostPath:
     path: /tmp/hostpath-provisioner/kubeflow/minio-pvc
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: minio-pvc
+  namespace: kubeflow
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 20Gi
+  storageClassName: minio-hostpath
